--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">name</a>.
+        >. Coded by <a href="#">Craig Kandengwa</a>.
       </p>
     </footer>
   </body>
